--- a/GymApp/appsettings.json
+++ b/GymApp/appsettings.json
@@ -3,9 +3,9 @@
     "DefaultConnection": "Data Source=DESKTOP-OFL5CCH;Initial Catalog=GymApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "CloudinarySettings": {
-    "CloudName": "duoutzgu3",
-    "ApiKey": "612576617439134",
-    "ApiSecret": "O7lwVOCYb_KJ_ukZWAINCpYwNJs"
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
   },
   "Logging": {
     "LogLevel": {
