--- a/GymApp/appsettings.json
+++ b/GymApp/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-OFL5CCH;Initial Catalog=GymApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"DefaultConnection": "Data Source=DESKTOP-OFL5CCH;Initial Catalog=GymApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    //"DefaultConnection": "Server=tcp:gymappdatabase.database.windows.net,1433;Initial Catalog=GymApp;Persist Security Info=False;User ID=gymapp;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Data Source=gymappdatabase.database.windows.net;Initial Catalog=GymAppFinal;User ID=gymapp;Password=xC2qgLFKrwjaCY9;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"DefaultConnection": "Data Source=gymappdatabase.database.windows.net;Initial Catalog=GymApp;User ID=gymapp;Password=********;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "CloudinarySettings": {
     "CloudName": "duoutzgu3",
